fix: Use dynamic upstream detection instead of hardcoded repo

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -16,6 +16,8 @@ jobs:
           fetch-depth: 0
 
       - name: Smart upstream sync
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
           
